<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Welcome to KATG on Android!</string>
    <string name="app_name">KeithAndTheGirl</string>
    <string name="app_short_name">KATG</string>
    
    <string name="tab_guests">Guests</string>
    <string name="tab_listen">Listen</string>
    <string name="tab_social">Social</string>
    <string name="tab_web">Web</string>
    <string name="tab_hosts">The Hosts</string>
    
    <string name="katg_header_logo_description">KATG Logo</string>
    <string name="katg_header_text_description">Keith and the Girl Free Comedy Show</string>
    
    <string name="menu_refresh_label">Refresh</string>
    <string name="menu_about_label">About KATG&#8230;</string>
    <string name="menu_quit_label">Quit</string>
    
    <string name="feed_entry_context_menu_header">Episode Menu</string>
    <string name="context_menu_play_label">Play Episode</string>
    <string name="context_menu_download_label">Download Episode</string>
    
    <string name="about_header">About KATG&#8230;</string>
	<string name="about_description_1">Keith and The Girl is a free comedy talk show hosted by Keith Malley and Chemda. Topics include current events, pop culture, politics and even intimate details of their lives.</string>
 	<string name="about_description_2">They create a new hour-long show each weekday and make it available on the site. Subscribe to the free podcast and have new episodes downloaded automatically.</string>
 	<string name="about_description_3">Every show is guaranteed to make you laugh!</string>
	<string name="about_description_4">This app was created by Dan Frey (@dmfrey). I am straight, married, I have a solid B cup for a man, and I give a 1,000,001 shits about this app!</string>
 	<string name="about_close">Close</string>
	
	<string name="next_show_label">Next Show:</string>
	
	<string name="live_label">Listen Live!</string>
    <string name="call_label">Call</string>
    <string name="play_label">Play</string>
    <string name="pause_label">Pause</string>
    <string name="stop_label">Stop</string>
    <string name="now_playing_label">Now Playing...</string>
    <string name="www_label">WWW</string>
    <string name="empty"></string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_share">Share</string>
    <string name="menu_most_recent">Recent</string>
    <string name="menu_top_count">Top</string>
    <string name="menu_name">Name</string>
        
    <string name="btn_feed">Episodes</string>
    <string name="btn_live">Listen Live</string>
    <string name="btn_twitter_keith">Twitter Keith</string>
    <string name="btn_twitter_chemda">Twitter Chemda</string>
    <string name="btn_facebook_keith">Facebook Keith</string>
    <string name="btn_facebook_chemda">Facebook Chemda</string>
    <string name="btn_website">WWW</string>
    <string name="btn_forums">Forums</string>
    
    <string name="player_controls_label">Player Controls</string>
    <string name="player_feedback_label">Feedback</string>
    <string name="player_feedback_name_label">Name</string>
    <string name="player_feedback_location_label">Location</string>
    <string name="player_feedback_comment_label">Comment</string>
    <string name="player_feedback_submit_label">Submit</string>
    
    <string name="quit">Quit</string>
    
    <string name="guest_image">Guest Image</string>
    <string name="guest_facebook">Facebook</string>
    <string name="guest_twitter">Twitter</string>
    <string name="guest_www">Website</string>
    
    <string name="entry_download">Download Episode</string>
	<string name="entry_play">Play Episode</string>
	<string name="entry_delete">Delete Episode</string>

	<string name="pref_settings_title">Settings</string>	
	<string name="pref_vip_title">VIP</string>
	<string name="pref_vip_description">Are you an IP or a VIP? Don\'t be an *JUST* IP...Be a VIP!</string>
	<string name="pref_vip_instructions">Enter you VIP code</string>
	
	<string name="feedback_title">Feedback</string>
	<string name="feedback_negative_button">Close</string>
	<string name="feedback_positive_button">Send</string>
	
	<string name="host_studio_content_description">Keith and Chemda Studio</string>
	<string name="host_facebook">Facebook</string>
	<string name="host_twitter">Twitter</string>
	<string name="host_website">WWW</string>
	<string name="host_forums">Forums</string>
	<string name="host_keith">Keith Malley</string>
	<string name="host_keith_facebook">Keith Facebook</string>
	<string name="host_keith_twitter">Keith Twitter</string>
	<string name="host_chemda">Chemda</string>
	<string name="host_chemda_facebook">Chemda Facebook</string>
	<string name="host_chemda_twitter">Chemda Twitter</string>
	<string name="host_chemda_www">Chemda Website</string>
		
</resources>