<?xml version="1.0" encoding="utf-8"?>
<com.keithandthegirl.ui.widget.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="#ffffff">
    
    <Button android:id="@+id/twitter_btn_keith"
        style="@style/DashboardButton"
        android:text="@string/btn_twitter_keith"
        android:textColor="@color/dashboard_text"
        android:drawableTop="@drawable/twitter_btn_keith" />
    <Button android:id="@+id/twitter_btn_chemda"
        style="@style/DashboardButton"
        android:text="@string/btn_twitter_chemda"
        android:textColor="@color/dashboard_text"
        android:drawableTop="@drawable/twitter_btn_chemda" />
    <Button android:id="@+id/facebook_btn_keith"
        style="@style/DashboardButton"
        android:text="@string/btn_facebook_keith"
        android:textColor="@color/dashboard_text"
        android:drawableTop="@drawable/facebook_btn_keith" />
    <Button android:id="@+id/facebook_btn_chemda"
        style="@style/DashboardButton"
        android:text="@string/btn_facebook_chemda"
        android:textColor="@color/dashboard_text"
        android:drawableTop="@drawable/facebook_btn_chemda" />
    
</com.keithandthegirl.ui.widget.DashboardLayout>
