<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *  This file is part of KeithAndTheGirl for Android
 * 
 *  KeithAndTheGirl for Android is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  KeithAndTheGirl for Android is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with KeithAndTheGirl for Android.  If not, see <http://www.gnu.org/licenses/>.
 *   
 * This software can be found at <https://github.com/dmfrey/KeithAndTheGirl/>
 *
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    android:orientation="vertical"
	android:padding="10dip">
	
    <TextView 
    	style="@style/Text"
    	android:id="@+id/about_description_text_view"
    	android:text="@string/about_description_1" />
				
    <TextView 
    	style="@style/Text"
    	android:text="@string/about_description_2" />
				
    <TextView 
    	style="@style/Text"
    	android:text="@string/about_description_3" />
				
    <TextView 
    	style="@style/Text"
    	android:text="@string/about_description_4" />
    	
</LinearLayout>
