<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *  This file is part of KeithAndTheGirl for Android
 * 
 *  KeithAndTheGirl for Android is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  KeithAndTheGirl for Android is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with KeithAndTheGirl for Android.  If not, see <http://www.gnu.org/licenses/>.
 *   
 * This software can be found at <https://github.com/dmfrey/KeithAndTheGirl/>
 *
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" >
    	
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/now_playing_label"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" >
    	
        <TextView
            android:id="@+id/now_playing_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text=""
            android:textSize="@dimen/text_size_big" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >
    	
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="100"
            android:text="@string/player_controls_label"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp" >
    	
        <Button
            android:id="@+id/player_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_label" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp" >
    	
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/player_feedback_label"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    	
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/player_feedback_name_label"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >
    	
    	<EditText
    	    android:id="@+id/player_feedback_name"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:ems="10"
    	    android:inputType="text" >
        </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    	
    	<TextView
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:text="@string/player_feedback_location_label"
    	    android:textSize="@dimen/text_size_small" />
        
     </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >
    	
    	<EditText
    	    android:id="@+id/player_feedback_location"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:ems="10"
    	    android:inputType="text" >
        </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    	
    	<TextView
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:text="@string/player_feedback_comment_label"
    	    android:textSize="@dimen/text_size_small" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >
    	
    	<EditText
    	    android:id="@+id/player_feedback_comment"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:ems="10"
    	    android:inputType="textMultiLine"
    	    android:lines="3"
    	    android:maxLines="5" />
    
    </LinearLayout>
    	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    	
    	<Button
            android:id="@+id/player_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_feedback_comment_label" />
        
    </LinearLayout>

</LinearLayout>

</ScrollView>

