<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *  This file is part of KeithAndTheGirl for Android
 * 
 *  KeithAndTheGirl for Android is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  KeithAndTheGirl for Android is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with KeithAndTheGirl for Android.  If not, see <http://www.gnu.org/licenses/>.
 *   
 * This software can be found at <https://github.com/dmfrey/KeithAndTheGirl/>
 *
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <ImageView
        android:id="@+id/guest_image"
        android:contentDescription="@string/guest_image"
        android:scaleType="centerCrop"
        android:layout_width="70dp"
        android:layout_height="70dp"/>
        
    <LinearLayout
        android:id="@+id/guest_details"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/guest_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/dashboard_text"
            android:textStyle="bold"
            android:textSize="16sp"
        />
        
        <TextView
            android:id="@+id/guest_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/body_text_1"
            android:textSize="12sp"
        />
        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		android:orientation="horizontal"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:gravity="right">
        
    		<ImageView
        		android:id="@+id/guest_facebook"
        		android:contentDescription="@string/guest_facebook"
        		android:scaleType="center"
        		android:layout_width="42dp"
        		android:layout_height="32dp"
        		android:paddingLeft="5sp"
        		android:paddingRight="5sp"
        		android:adjustViewBounds="true"
        		android:src="@drawable/f_logo" />
        
    		<ImageView
        		android:id="@+id/guest_twitter"
        		android:contentDescription="@string/guest_twitter"
        		android:scaleType="center"
        		android:layout_width="42dp"
        		android:layout_height="32dp"
        		android:paddingLeft="5sp"
        		android:paddingRight="5sp"
        		android:adjustViewBounds="true"
        		android:src="@drawable/t_logo" />
        
    		<ImageView
        		android:id="@+id/guest_www"
        		android:contentDescription="@string/guest_www"
        		android:scaleType="center"
        		android:layout_width="42dp"
        		android:layout_height="32dp"
        		android:paddingLeft="5sp"
        		android:paddingRight="5sp"
        		android:adjustViewBounds="true"
        		android:src="@drawable/www" />
        
    	</LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>