<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *  This file is part of KeithAndTheGirl for Android
 * 
 *  KeithAndTheGirl for Android is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  KeithAndTheGirl for Android is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with KeithAndTheGirl for Android.  If not, see <http://www.gnu.org/licenses/>.
 *   
 * This software can be found at <https://github.com/dmfrey/KeithAndTheGirl/>
 *
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    android:orientation="vertical"
	android:padding="10dip">
	
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp" >
    	
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/player_feedback_label"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    	
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:text="@string/player_feedback_name_label"
            android:textSize="@dimen/text_size_small" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >
    	
    	<EditText
    	    android:id="@+id/feedback_name"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="144.20"
    	    android:ems="10"
    	    android:inputType="text"
    	    android:maxLength="50" >

        </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    	
    	<TextView
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:text="@string/player_feedback_location_label"
    	    android:textSize="@dimen/text_size_small" />
        
     </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >
    	
    	<EditText
    	    android:id="@+id/feedback_location"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:ems="10"
    	    android:inputType="text"
    	    android:maxLength="50" >

        </EditText>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" >
    	
    	<TextView
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:text="@string/player_feedback_comment_label"
    	    android:textSize="@dimen/text_size_small" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >
    	
    	<EditText
    	    android:id="@+id/feedback_comment"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="100"
    	    android:ems="10"
    	    android:inputType="textMultiLine"
    	    android:lines="3"
    	    android:maxLines="5" />
    
    </LinearLayout>
    	
</LinearLayout>
